--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.resS filter=lfs diff=lfs merge=lfs -text
+*.app/**/*.dylib filter=lfs diff=lfs merge=lfs -text 
